Make children iterator available and do not use LinkedList.